feat: image entity, image api, image routes, image upload and visualization
